# stripe-xero-sync

./: .gitignore  Makefile  README.md  migration.state.json  pyproject.toml  setup.cfg
stripe_xero/: config.py  migration.py  quickbooks.py  stripe.py  utils.py  xero.py
