[metadata]
name = stripe-xero-sync
version = 0.1
url = https://github.com/whummer/stripe-xero-sync
author = Waldemar Hummer
author_email = waldemar@localstack.cloud
description = Utilities to sync Stripe data into the Xero accounting platform
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find:
install_requires =
    flask-cors
    h11
    hypercorn
    intuit-oauth
    localstack
    moto-ext
    pyopenssl
    python-quickbooks
    quart
    readerwriterlock
    stripe
    xero-python
    xmltodict

[options.packages.find]
exclude =
    tests*
